# Recursive-Kanban-Planner

./: .gitignore  .stylelintrc.json  CNAME  Cargo.toml  Dioxus.toml  README.md  check_output.txt  cleanup_markdown.py  error.txt  error2.txt  fix_docs.py  index.html  lint_md.py  package-lock.json  package.json  playwright.config.ts  raw_issues.json  tailwind.config.js
.agents/skills/implementer/: SKILL.md
.agents/skills/janitor/: SKILL.md
.agents/skills/optimizer/: SKILL.md
.agents/skills/orchestrator/: SKILL.md
.agents/skills/planner/: SKILL.md
.agents/skills/readability/: SKILL.md
.agents/skills/reviewer/: SKILL.md
.agents/skills/tester/: SKILL.md
.agents/skills/ui_ux/: SKILL.md
.agents/workflows/: micro-step-flow.md
.github/workflows/: ci.yml  github-pages.yml
assets/: app.css  logging.toml
docs/: agent_architecture.md  codebase_review.md  design_document.md  git_issues.md  notebooklm_context.txt  rust-for-python-devs.md  task.md
scripts/: build-desktop.ps1  build-web.ps1  check-css.mjs  common.ps1  serve-web.ps1  test-all.ps1
src/: app.rs  components.rs  lib.rs  main.rs
src/application/: command.rs  execute.rs  mod.rs  projections.rs
src/domain/: bucket.rs  card.rs  due_date.rs  error.rs  id.rs  label.rs  mod.rs  note.rs  registry.rs  rule.rs  title.rs
src/domain/registry/: mutations.rs  traversal.rs  validation.rs  workspace.rs
src/infrastructure/: logging.rs  mod.rs  repository.rs
src/interface/: actions.rs  app.rs  error_templates.rs  mod.rs  routes.rs  tailwind.css
src/interface/actions/: feedback.rs  hooks.rs  interop.rs  logic.rs  map_layout.rs  mod.rs
src/interface/app/: bootstrap.rs  modal_dispatch.rs
src/interface/components/: board.rs  board_view.rs  card.rs  card_item.rs  layout.rs  mod.rs  modal.rs  shared_forms.rs  visuals.rs  web_utilities.rs
src/interface/components/map/: minimap.rs  (+1 more)
src/interface/routes/: board.rs  board_screen.rs  home.rs  map_screen.rs  mod.rs
src/models/: card.rs  card_registry.rs
tests/: smoke.spec.ts
tmp-gh-pages-test/public/: index.html
tmp-gh-pages-test/public/assets/: kanban_planner-dxh5be7486b959e3ba8.js  kanban_planner_bg-dxh86a17d875e0e0c6.wasm
(+20 files in other folders)
