[package]
name = "kanban_planner"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.2", features = ["csr", "ssr", "hydrate"] }
leptos_axum = "0.8.2"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1.2.1", features = ["serde"] }
