[package]
name = "kanban_planner"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["web", "desktop", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1.2.1", features = ["serde"] }
thiserror = "2"
web-sys = { version = "0.3.91", features = ["Window", "Storage"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
