[package]
name = "kanban_planner"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1.2.1", features = ["serde"] }
thiserror = "2"
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = ["Blob", "Document", "Event", "File", "FileList", "FileReader", "HtmlAnchorElement", "HtmlInputElement", "ProgressEvent", "Storage", "Url", "Window"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-appender = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
